datasets endpoint update as per new spec

--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,11 @@
     <name>PRIDE Archive PROXI WS</name>
 
     <properties>
-        <uk.ac.ebi.pride.architectural-pride-tdd.version>1.0.3</uk.ac.ebi.pride.architectural-pride-tdd.version>
-        <uk.ac.ebi.pride.architectural-pride-spring.version>1.0.0-SNAPSHOT</uk.ac.ebi.pride.architectural-pride-spring.version>
-        <uk.ac.ebi.pride.archive.pride-mongodb-repo.version>1.0.2-springboot-SNAPSHOT</uk.ac.ebi.pride.archive.pride-mongodb-repo.version>
-        <uk.ac.ebi.pride.archive.data-provider.version>1.0.0-SNAPSHOT</uk.ac.ebi.pride.archive.data-provider.version>
+        <uk.ac.ebi.pride.architectural-pride-tdd.version>1.0.4-SNAPSHOT
+        </uk.ac.ebi.pride.architectural-pride-tdd.version>
+        <uk.ac.ebi.pride.archive.pride-mongodb-repo.version>1.0.3-SNAPSHOT
+        </uk.ac.ebi.pride.archive.pride-mongodb-repo.version>
+        <uk.ac.ebi.pride.archive.data-provider.version>1.0.1-SNAPSHOT</uk.ac.ebi.pride.archive.data-provider.version>
         <io.springfox.swagger.version>2.7.0</io.springfox.swagger.version>
     </properties>
 
