--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,15 +21,13 @@ mongodb.projects.machine.uri=@maven.spring.pridedb.datasource.mongo.machine.uri@
 # Configuration for MongoDB Molecules
 mongodb.molecules.database=@maven.spring.molecules.datasource.mongo.db@
 mongodb.molecules.machine.uri=@maven.spring.molecules.datasource.mongo.machine.uri@
-#
-###### Solr CLoud #####
-#
-#solr.master.hh.url=@maven.spring.pridedb.solr.hh.master.url@
-#solr.master.hx.url=@maven.spring.pridedb.solr.hx.master.url@
-#spring.data.solr.zk-host.hh=@spring.data.solr.zk-host.hh@
-#spring.data.solr.zk-host.hx=@spring.data.solr.zk-host.hx@
-#spring.pridedb.solr.hh.url=@maven.spring.pridedb.solr.hh.url@
-#spring.pridedb.solr.hx.url=@maven.spring.pridedb.solr.hx.url@
+##### Solr CLoud #####
+solr.master.hh.url=@maven.spring.pridedb.solr.hh.master.url@
+solr.master.hx.url=@maven.spring.pridedb.solr.hx.master.url@
+spring.data.solr.zk-host.hh=@spring.data.solr.zk-host.hh@
+spring.data.solr.zk-host.hx=@spring.data.solr.zk-host.hx@
+spring.pridedb.solr.hh.url=@maven.spring.pridedb.solr.hh.url@
+spring.pridedb.solr.hx.url=@maven.spring.pridedb.solr.hx.url@
 
 ### Configure WS APP
 
