--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <properties>
         <uk.ac.ebi.pride.architectural-pride-tdd.version>1.0.4-SNAPSHOT
         </uk.ac.ebi.pride.architectural-pride-tdd.version>
+        <uk.ac.ebi.pride.archive.pride-solr-indexes.version>1.0.3-SNAPSHOT
+        </uk.ac.ebi.pride.archive.pride-solr-indexes.version>
         <uk.ac.ebi.pride.archive.pride-mongodb-repo.version>1.0.3-SNAPSHOT
         </uk.ac.ebi.pride.archive.pride-mongodb-repo.version>
         <uk.ac.ebi.pride.archive.data-provider.version>1.0.1-SNAPSHOT</uk.ac.ebi.pride.archive.data-provider.version>
@@ -50,6 +52,24 @@
             <groupId>uk.ac.ebi.pride.archive</groupId>
             <artifactId>pride-mongodb-repo</artifactId>
             <version>${uk.ac.ebi.pride.archive.pride-mongodb-repo.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>uk.ac.ebi.pride.archive</groupId>
+                    <artifactId>data-provider-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.ac.ebi.pride.archive</groupId>
+            <artifactId>pride-solr-indexes</artifactId>
+            <version>${uk.ac.ebi.pride.archive.pride-solr-indexes.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>uk.ac.ebi.pride.archive</groupId>
+                    <artifactId>data-provider-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -172,6 +192,16 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <excludeDevtools>true</excludeDevtools>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <excludes>
+                        <exclude>*.properties</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
