--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.pridedb.solr.hx.url=@maven.spring.pridedb.solr.hx.url@
 ### Configure WS APP
 
 server.port=9022
-server.servlet.contextPath=/v0.1/
+server.servlet.contextPath=/pride/proxi/archive/v0.1
 
 deployment.env = dev
 #deployment.env = prd
