--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.pridedb.solr.hx.url=@maven.spring.pridedb.solr.hx.url@
 
 #server.port=9020
 server.port=9022
-server.servlet.contextPath=/v1/
+server.servlet.contextPath=/pride/proxi/archive/
 
 deployment.env = dev
 #deployment.env = prd
