--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,12 @@ server.servlet.contextPath=/pride/proxi/archive/v0.1
 
 deployment.env = dev
 #deployment.env = prd
+
+
+# S3 keys.
+spectra.archive.s3.url=@maven.spectra.archive.s3.url@
+spectra.archive.s3.accesskey=@maven.spectra.archive.s3.accesskey@
+spectra.archive.s3.secretkey=@maven.spectra.archive.s3.secretkey@
+spectra.archive.s3.bucketname=@maven.spectra.archive.s3.bucketname@
+spectra.archive.s3.region=eu-west-2
+cloud.aws.region.static=eu-west-2
